--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
+sudo: required
+language: python
+python:
+  - "3.6"
+
 before_install:
 - openssl aes-256-cbc -K $encrypted_d51026dfa49b_key -iv $encrypted_d51026dfa49b_iv
   -in cits-3200-abc14d0972cf.json.enc -out cits-3200-abc14d0972cf.json -d
+
 deploy:
   provider: gae
   skip_cleanup: true
