--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==1.0.2
-google-cloud-bigquery
-google-cloud-language
-grpcio
+# Flask==1.0.2
+# google-cloud-bigquery
+# google-cloud-language
+# grpcio
