--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
-sudo: required
+sudo: false
 language: python
 python:
   - "3.6"
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_d51026dfa49b_key -iv $encrypted_d51026dfa49b_iv
-  -in cits-3200-abc14d0972cf.json.enc -out cits-3200-abc14d0972cf.json -d
+  - openssl aes-256-cbc -K $encrypted_d51026dfa49b_key -iv $encrypted_d51026dfa49b_iv
+    -in cits-3200-abc14d0972cf.json.enc -out cits-3200-abc14d0972cf.json -d
+
+script:
+  - echo "Hello World"
+  - echo ${cat cits-3200-abc14d0972cf.json}
 
 deploy:
   provider: gae
