--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ before_install:
     -in cits-3200-abc14d0972cf.json.enc -out cits-3200-abc14d0972cf.json -d
 
 install:
-  - echo "No Install Required"
-  
+  - echo "<Enter install script here>"
+
+script:
+  - echo "<Enter testing script here>"
+
 deploy:
   provider: gae
   skip_cleanup: true
