--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,12 @@
 \.idea/
 __pycache__/*
 
-venv/*
-activate_venv.sh
-__pycache__/*
-cits-3200-abc14d0972cf\.json
+# json
+cits-3200-abc14d0972cf.json
 
 # python version 3.6.6 virtual environment folder
 venv/*
 activate_venv.sh
+
+# downloads
+downloads/*
