--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,9 @@
 \.idea/
 __pycache__/*
 
+# python virtual environment
 venv/*
 activate_venv.sh
-__pycache__/*
-cits-3200-abc14d0972cf\.json
 
-# python version 3.6.6 virtual environment folder
-venv/*
-activate_venv.sh
+# json
+cits-3200-abc14d0972cf.json
